writings/writefreely-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: writings-frontend-local
  namespace: writings
spec:
  type: ClusterIP
  selector:
    app: writefreely
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
