writings/writefreely-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: writings
  namespace: writings
spec:
  rules:
  - host: writings.nikolaiathome.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: podinfo
            port:
              number: 80
